--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,7 @@
     </dependencies>
 
     <build>
+        <testSourceDirectory>src/main/test</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
