--- a/.github/workflows/develop-branch-pipeline.yml
+++ b/.github/workflows/develop-branch-pipeline.yml
@@ -29,6 +29,6 @@ jobs:
           java-version: 19
           distribution: adopt
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: xvfb-run mvn -B package --file pom.xml
       - name: Run tests
         run: mvn test
