--- a/.github/workflows/develop-branch-pipeline.yml
+++ b/.github/workflows/develop-branch-pipeline.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - 'develop'
 
+env:
+  JDBC_USER: root
+  JDBC_PASSWORD: "slaptazodis"
+
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
@@ -32,6 +36,8 @@ jobs:
           sed -i "s|<property name=\"javax.persistence.jdbc.password\" value=\"\"/>|<property name=\"javax.persistence.jdbc.password\" value=\"\${JDBC_PASSWORD}\"/>|g" src/main/resources/META-INF/persistence.xml
       - name: Print modified file
         run: cat src/main/resources/META-INF/persistence.xml
+      - name: Print MySQL service version
+        run: echo "SELECT version();" | mysql --host=mysql --user=root --password="${JDBC_PASSWORD}"
       - name: Build and Test with Maven
         run: xvfb-run mvn -B verify --file pom.xml
         env:
@@ -39,7 +45,5 @@ jobs:
           JDBC_USER: root
           JDBC_PASSWORD: "slaptazodis"
           JDBC_DRIVER: com.mysql.cj.jdbc.Driver
-      - name: Print MySQL service version
-        run: echo "SELECT version();" | mysql --host=mysql --user=root --password="slaptazodis" TruckManagement
       - name: Run tests
         run: mvn test
