--- a/.github/workflows/develop-branch-pipeline.yml
+++ b/.github/workflows/develop-branch-pipeline.yml
@@ -37,11 +37,11 @@ jobs:
       - name: Print modified file
         run: cat src/main/resources/META-INF/persistence.xml
       - name: Print MySQL service version
-        run: echo "SELECT version();" | mysql --host=mysql --user=root --password="${JDBC_PASSWORD}"
+        run: echo "SELECT version();" | mysql --host=127.0.0.1 --user=root --password="${JDBC_PASSWORD}"
       - name: Build and Test with Maven
         run: xvfb-run mvn -B verify --file pom.xml
         env:
-          JDBC_URL: jdbc:mysql://mysql:3306/TruckManagement?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
+          JDBC_URL: jdbc:mysql://127.0.0.1:3306/TruckManagement?createDatabaseIfNotExist=true&useUnicode=yes&characterEncoding=UTF-8
           JDBC_USER: root
           JDBC_PASSWORD: "slaptazodis"
           JDBC_DRIVER: com.mysql.cj.jdbc.Driver
